Added language extensions

--- a/src/constants.yml
+++ b/src/constants.yml
@@ -1,3 +1,3 @@
-VERSION: 0.5
+VERSION: 0.5.1
 AUTHOR: M@ McCray <matt@elucidata.net>
-URL: http://github.com/darthapo/core.js
+URL: http://github.com/darthapo/core-js
